[package]
name = "twig-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = "1.23.0"
anyhow = "1.0.66"
chrono = "0.4.23"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
palette = { version = "0.6.1", features = ["serializing"] }
uuid = { version = "1.2.2", features = ["v4"] }
url = "2.3.1"